apps/outline/outline-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: outline
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
