apps/outline/outline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline
spec:
  selector:
    app: outline
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
